fix typer box alignment

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ footer {
     -webkit-transition: .2s ease-in-out;
     -o-transition: .2s ease-in-out;
     transition: .2s ease-in-out;
+    margin-top: 6em;
 }
 .typer-style:hover {
     -webkit-transition: .2s ease-in-out;
